// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly 1`] = `
<label
  className="checkbox foo size--medium variant--default color--primary"
  style={
    Object {
      "--color": "var(--color-primary)",
    }
  }
>
  <input
    checked={true}
    className="visually-hidden"
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
    />
    <path
      d="M10.996 12.556 9.7 11.285l-1.4 1.43 2.704 2.647 4.699-4.651-1.406-1.422z"
    />
  </svg>
  <span
    className="label"
  >
    Checkbox
  </span>
</label>
`;

exports[`Checkbox component should work with different colors 1`] = `
Array [
  <label
    className="checkbox size--medium variant--default color--primary"
    style={
      Object {
        "--color": "var(--color-primary)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      primary
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--secondary"
    style={
      Object {
        "--color": "var(--color-secondary)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      secondary
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--dark"
    style={
      Object {
        "--color": "var(--color-dark)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      dark
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--light"
    style={
      Object {
        "--color": "var(--color-light)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      light
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--error"
    style={
      Object {
        "--color": "var(--color-error)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      error
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--warning"
    style={
      Object {
        "--color": "var(--color-warning)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      warning
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--info"
    style={
      Object {
        "--color": "var(--color-info)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      info
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--success"
    style={
      Object {
        "--color": "var(--color-success)",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      success
    </span>
  </label>,
  <label
    className="checkbox size--medium variant--default color--hotpink"
    style={
      Object {
        "--color": "hotpink",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      hotpink
    </span>
  </label>,
]
`;

exports[`Checkbox component should work with different sizes 1`] = `
Array [
  <label
    className="checkbox size--small variant--default color--default"
    style={
      Object {
        "--color": null,
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      small
    </span>
  </label>,
  <label
    className="checkbox size--large variant--default color--default"
    style={
      Object {
        "--color": null,
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      large
    </span>
  </label>,
  <label
    className="checkbox variant--default color--default"
    style={
      Object {
        "--color": null,
        "--size": "50px",
      }
    }
  >
    <input
      className="visually-hidden"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 5c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2H7zm0 12V7h10l.002 10H7z"
      />
    </svg>
    <span
      className="label"
    >
      50
    </span>
  </label>,
]
`;
